# ai-fleet-assistant

./: .env.example  01_Assessment_Brief.md  02_Submission_Checklist.md  03_AI_Usage_Template.md  AI_USAGE.md  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt
api/: __init__.py  schemas.py  server.py
api/routes/: ai.py  fleet.py
docs/: architecture_diagrams.md
eval/: adversarial_questions.csv  eval_report.md  run_eval.py  seed_results.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/Charts/: Gauge.css  Gauge.jsx  KpiCard.css  KpiCard.jsx
frontend/src/components/Layout/: BottomNav.css  BottomNav.jsx  TopBar.css  TopBar.jsx
frontend/src/hooks/: useFleetData.js
frontend/src/pages/Alerts/: Alerts.css  Alerts.jsx
frontend/src/pages/Copilot/: Copilot.css  Copilot.jsx
frontend/src/pages/Dashboard/: Dashboard.css  Dashboard.jsx
frontend/src/pages/DriverScorecard/: DriverScorecard.css  DriverScorecard.jsx
frontend/src/styles/: index.css
input/: questions_seed.csv  schema.md
input/data/: alert_events.csv  asset_registry.csv  daily_asset_metrics.csv
input/docs/: battery_alerts.md  communication_loss.md  error_codes_current.md  ignition_anomalies.md  legacy_error_codes_2023.md  refrigerated_temperature_monitoring.md  trip_detection_px200.md
src/: __init__.py  config.py  data_pipeline.py  doc_pipeline.py  main.py  models.py  preprocessor.py  prompts.py  router.py
tests/: test_data_pipeline.py  test_doc_pipeline.py  test_preprocessor.py
(+14 files in other folders)
